--- a/src/app.css
+++ b/src/app.css
@@ -11,8 +11,12 @@
   body {
     display: flex;
     flex-direction: column;
-    height: 100vh;
     padding: 0 1.5rem;
+  }
+
+  html,
+  body {
+    height: 100%;
   }
 
   h1 {
