--- a/src/app.css
+++ b/src/app.css
@@ -48,7 +48,34 @@
   }
 
   a:hover,
-  a:focus {
+  a:focus,
+  a.text-link:hover,
+  a.text-link:focus {
     opacity: 100%;
+  }
+
+  a.text-link {
+    display: inline;
+    padding: 0;
+    opacity: 80%;
+    position: relative;
+    color: hsl(var(--p));
+  }
+
+  a.text-link::before {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: hsl(var(--p));
+    transform: scaleX(0);
+    transition: all 200ms ease;
+  }
+
+  a.text-link:hover::before {
+    transform: scaleX(1);
   }
 }
