--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,7 @@
   :root {
     color-scheme: only dark;
     font-family: 'Ubuntu Mono', monospace;
+    scroll-behavior: smooth;
 
     --vh: 1vh;
     --header-height: 4rem;
@@ -48,7 +49,34 @@
   }
 
   a:hover,
-  a:focus {
+  a:focus,
+  .text-link:hover,
+  .text-link:focus {
     opacity: 100%;
+  }
+
+  .text-link {
+    display: inline;
+    padding: 0;
+    opacity: 100%;
+    position: relative;
+    color: hsl(var(--p));
+  }
+
+  .text-link::before {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: hsl(var(--p));
+    transform: scaleX(0);
+    transition: all 200ms ease;
+  }
+
+  a.text-link:hover::before {
+    transform: scaleX(1);
   }
 }
