Add contact form logic

--- a/src/app.css
+++ b/src/app.css
@@ -11,14 +11,19 @@
     --vh: 1vh;
     --header-height: 4rem;
     --footer-height: 4rem;
-    --body-padding: 1.5rem;
+    --body-padding: 2rem;
+    --body-padding-mobile: 1.5rem;
   }
 
   body {
     display: flex;
     flex-direction: column;
-    padding: 0 var(--body-padding);
+    padding: 0 var(--body-padding-mobile);
     min-height: calc(var(--vh) * 100);
+
+    @media (min-width: 768px) {
+      padding: 0 var(--body-padding);
+    }
   }
 
   body.fixed-height {
@@ -26,8 +31,15 @@
   }
 
   .body-full-width-section {
-    width: calc(100% + (2 * var(--body-padding)));
-    margin-left: calc(var(--body-padding) * -1);
+    width: calc(100% + (2 * var(--body-padding-mobile)));
+    margin-left: calc(var(--body-padding-mobile) * -1);
+    padding: 0 var(--body-padding-mobile);
+
+    @media (min-width: 768px) {
+      width: calc(100% + (2 * var(--body-padding)));
+      margin-left: calc(var(--body-padding) * -1);
+      padding: 0 var(--body-padding);
+    }
   }
 
   a {
