--- a/src/app.css
+++ b/src/app.css
@@ -81,4 +81,13 @@
   a.text-link:hover::before {
     transform: scaleX(1);
   }
+
+  .hide-scrollbar {
+    -ms-overflow-style: none; /* IE, Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+  }
 }
